--- a/package.json
+++ b/package.json
@@ -1,10 +1,25 @@
 {
-  "name": "stateform-element",
+  "name": "@stateform/element",
   "version": "0.1.0",
-  "private": true,
+  "main": "dist/stateform-element.common.js",
+  "browser": "dist/stateform-element.umd.min.js",
+  "files": [
+    "dist"
+  ],
+  "description": "StateForm implementation of element",
+  "repository": "https://github.com/stateform/stateform-element",
+  "keywords": [
+    "stateform",
+    "vue",
+    "element-ui",
+    "element",
+    "form",
+    "generator"
+  ],
+  "license": "MIT",
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
+    "build": "NODE_ENV=production vue-cli-service build --target lib --name stateform-element src/lib/index.js",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
