--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@stateform/element",
-  "version": "0.1.4",
+  "version": "0.1.5",
   "main": "dist/stateform-element.common.js",
   "browser": "dist/stateform-element.umd.min.js",
   "files": [
@@ -19,7 +19,7 @@
   "license": "MIT",
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "NODE_ENV=production vue-cli-service build --target lib --name stateform-element src/lib/index.js",
+    "build": "vue-cli-service build --mode production --target lib --name stateform-element src/lib/index.js",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
