--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@stateform/element",
-  "version": "0.1.9",
+  "version": "0.1.10",
   "main": "dist/stateform-element.common.js",
   "browser": "dist/stateform-element.umd.min.js",
   "files": [
@@ -22,17 +22,18 @@
     "build": "vue-cli-service build --mode production --target lib --name stateform-element src/lib/index.js",
     "lint": "vue-cli-service lint"
   },
-  "dependencies": {
-    "element-ui": "^2.6.1",
-    "vue": "^2.6.8"
+  "peerDependencies": {
+    "vue": "^2.6.8",
+    "element-ui": "^2.9.1"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^3.4.1",
-    "@vue/cli-plugin-eslint": "^3.4.1",
-    "@vue/cli-service": "^3.4.1",
+    "@vue/cli-plugin-babel": "^3.8.0",
+    "@vue/cli-plugin-eslint": "^3.8.0",
+    "@vue/cli-service": "^3.8.0",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.2",
-    "vue-template-compiler": "^2.6.8"
+    "vue": "^2.6.10",
+    "vue-template-compiler": "^2.6.10"
   },
   "eslintConfig": {
     "root": true,
